--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Hassan Alwayel <hsn.alwayel@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.4"
   },
   "scripts": {
     "start": "nodemon app.js"
